--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -12,3 +12,9 @@
 @import "../pages/contact/contact";
 
 @import "../pages/home/home";
+
+.header__image {
+    display: block;
+    margin: auto;
+    max-width: 100px;
+}
