--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -1,6 +1,21 @@
 .home {
-    button {
-        display: block;
-        margin: 1rem auto;
+    .home__buttons-container {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: space-around;
+    }
+
+    .home__buttons {
+        button {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        button:nth-of-type(odd) {
+            margin-bottom: 4rem;
+        }
     }
 }
