navigate to articles page after getting travel information; bug fix

--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -13,6 +13,8 @@
 
 @import "../pages/home/home";
 
+@import "../pages/articles/articles";
+
 .header__image {
     display: block;
     margin: auto;
