--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -1,21 +1,17 @@
 .home {
-    .home__buttons-container {
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        justify-content: space-around;
-    }
 
-    .home__buttons {
-        button {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
+  .home__button {
+    display: block;
+    margin: 2rem auto;
+    width: 85vw;;
+  }
 
-        button:nth-of-type(odd) {
-            margin-bottom: 4rem;
-        }
-    }
+  .home__button > .button-inner { 
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+  }
+
 }
