--- a/app/theme/app.core.scss
+++ b/app/theme/app.core.scss
@@ -11,6 +11,8 @@
 
 @import "../pages/articles/articles";
 
+@import "../components/stations-modal/stations-modal";
+
 .header__image {
     display: block;
     margin: auto;
