--- a/app/components/stations-modal/stations-modal.html
+++ b/app/components/stations-modal/stations-modal.html
@@ -5,8 +5,8 @@
     </ion-title>
     <ion-buttons start>
       <button (click)="closeModal()">
-        <span primary showWhen="ios">Cancel</span>
-        <ion-icon name="md-close" showWhen="android,windows"></ion-icon>
+        <span light showWhen="ios">Cancel</span>
+        <ion-icon light name="md-close" showWhen="android,windows"></ion-icon>
       </button>
     </ion-buttons>
   </ion-toolbar>
@@ -14,6 +14,9 @@
 
 <ion-content>
     <ion-searchbar (ionInput)="getStation($event)"></ion-searchbar>
+    <div class="station__spinner" *ngIf="!stations || !stations.length">
+      <ion-spinner></ion-spinner>
+    </div>
     <ion-list>
         <ion-item *ngFor="let station of stations" (click)="setStation(station)">
             {{ station.Name }}
